# synapse

./: .gitignore  README.md  docker-compose.yml
client/: .env.example  index.html  package-lock.json  package.json
client/src/: App.css  App.tsx  index.css
client/src/components/: Canvas.tsx  Toolbar.tsx  UserPresence.tsx
client/src/hooks/: useYjs.ts
client/src/lib/: renderer.ts
client/src/stores/: canvasStore.ts
client/src/types/: index.ts
server/: Cargo.toml
server/src/: main.rs  protocol.rs  room.rs
ws-server/: package-lock.json  package.json  server.js
