[package]
name = "synapse-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4"
actix-ws = "0.3"
actix-rt = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
log = "0.4"

# CORS support
actix-cors = "0.7"

# For graceful shutdown
tokio-util = "0.7"
